trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 150
    msg = "<b>Sinyal Saham Top 5:</b>
          ^
SyntaxError: unterminated string literal (detected at line 150)
